MDEV-33309: for update|delete analyze format=json doesn't show r_other_time_ms

Single-table UPDATE/DELETEs only show r_total_time_ms in top-level query block.
Replace it with r_table_time_ms and r_other_time_ms.